--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
+    <meta property="og:title" content="DevilTea" />
+    <meta property="og:description" content="DevilTea 的個人網站" />
+    <meta property="og:url" content="https://deviltea.me/" />
+    <meta property="og:image" content="https://deviltea.me/images/og.png" />
+    <meta property="og:type" content="website" type="image/x-icon" />
+    <meta property="og:site_name" content="DevilTea" />
+    <title>DevilTea</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+        properly without JavaScript enabled. Please enable it to
+        continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
