Make avatar.png as a preload resource

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
     <meta property="og:title" content="DevilTea" />
     <meta property="og:description" content="DevilTea 的個人網站" />
     <meta property="og:url" content="https://deviltea.me/" />
     <meta property="og:image" content="https://deviltea.me/images/og.png" />
     <meta property="og:type" content="website" type="image/x-icon" />
     <meta property="og:site_name" content="DevilTea" />
+    <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
+    <link rel="preload" href="<%= BASE_URL %>images/avatar.png" as="image" />
     <title>DevilTea</title>
   </head>
   <body>
