Update preload image link

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website" type="image/x-icon" />
     <meta property="og:site_name" content="DevilTea" />
     <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
+    <link rel="preload" href="https://www.gravatar.com/avatar/1ec31667ea9ff1e97b84344e9a25d8b6?s=320" as="image" />
     <title>DevilTea</title>
   </head>
   <body>
