--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta property="og:site_name" content="DevilTea" />
     <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
     <link rel="preload" href="https://www.gravatar.com/avatar/1ec31667ea9ff1e97b84344e9a25d8b6?s=320" as="image" />
+    <link rel="preload" href="<%= BASE_URL %>images/loading.gif" as="image" />
     <title>DevilTea</title>
   </head>
   <body>
