Update route's effect to scrolling and head meta

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta property="og:title" content="DevilTea" />
-    <meta property="og:description" content="DevilTea 的個人網站" />
-    <meta property="og:url" content="https://deviltea.me/" />
-    <meta property="og:image" content="https://deviltea.me/images/og.png" />
-    <meta property="og:type" content="website" type="image/x-icon" />
-    <meta property="og:site_name" content="DevilTea" />
+
+    <title class="meta"></title>
+    <meta class="meta" name="description" content="" />
+    <meta class="meta" property="og:title" content="" />
+    <meta class="meta" property="og:description" content="" />
+    <meta class="meta" property="og:url" content="" />
+    <meta class="meta" property="og:image" content="" />
+    <meta class="meta" property="og:type" content=""/>
+    <meta class="meta" property="og:site_name" content="" />
+
     <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
-    <link rel="preload" href="https://www.gravatar.com/avatar/1ec31667ea9ff1e97b84344e9a25d8b6?s=320" as="image" />
     <link rel="preload" href="<%= BASE_URL %>images/loading.gif" as="image" />
-    <title>DevilTea</title>
   </head>
   <body>
     <noscript>
