Update index.html and font loaing event

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,21 @@
     <meta class="meta" property="og:description" content="" />
     <meta class="meta" property="og:url" content="" />
     <meta class="meta" property="og:image" content="" />
-    <meta class="meta" property="og:type" content=""/>
+    <meta class="meta" property="og:type" content="" />
     <meta class="meta" property="og:site_name" content="" />
 
+    <link
+      rel="stylesheet"
+      href="/fonts/JetBrainsMono/font.css"
+      media="all"
+      async
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700"
+      media="all"
+      async
+    />
     <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
     <link rel="preload" href="<%= BASE_URL %>images/loading.gif" as="image" />
   </head>
