--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700"
+      href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap"
       media="all"
       async
     />
