--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
       media="all"
       async
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:300,400,500,700&display=swap"
       media="all"
       async
-    />
+    /> -->
     <link rel="icon" href="<%= BASE_URL %>images/favicon.png" />
     <link rel="preload" href="<%= BASE_URL %>images/loading.gif" as="image" />
   </head>
